# dictionary_learning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  __init__.py  buffer.py  cache.py  demo.py  dictionary.py  evaluation.py  example.py  gpt2_sae_trainer.py  grad_pursuit.py  graphing.ipynb  interp.py  kernels.py  label_features.py  pretrained_dictionary_downloader.sh  pyproject.toml  requirements.txt  run_gpt2_sae_trainer.sh  search_utils.py  training.py  utils.py
.github/workflows/: black-format-check.yml  build.yml
dictionary_learning/: __init__.py  activault_s3_buffer.py  buffer.py  cache.py  config.py  dictionary.py  evaluation.py  grad_pursuit.py  interp.py  pytorch_buffer.py  training.py  utils.py
dictionary_learning/scripts/: train_crosscoder.py
dictionary_learning/trainers/: __init__.py  batch_top_k.py  crosscoder.py  gated_anneal.py  gdm.py  jumprelu.py  matryoshka_batch_top_k.py  p_anneal.py  standard.py  top_k.py  trainer.py
tests/: test_end_to_end.py  test_pytorch_end_to_end.py
tests/unit/: test_dictionary.py
trainers/: __init__.py  batch_top_k.py  batch_top_k_to_jump.py  crosscoder.py  decoder_only.py  gated.py  gated_anneal.py  gated_new.py  gdm.py  group.py  jump.py  jump_relu.py  jumprelu.py  lista.py  matroyshka_batch_top_k.py  matryoshka_batch_top_k.py  p_anneal.py  p_anneal2.py  p_anneal_new.py  relu.py  sparsity.py  standard.py  standard_lr_decay.py  standard_new.py  std_gp_reg.py  std_new_gp_reg.py  top_k.py  trainer.py  transcoder_p_anneal.py
