[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "dictionary_learning"description = "A package for dictionary learning via sparse autoencoders on neural network activations"
readme = "README.md"
keywords = ["dictionary learning", "sparse autoencoder", "neural networks"]

license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "nnsight",
    "einops",
]
